--- a/templates/home.html
+++ b/templates/home.html
@@ -2,3 +2,19 @@
 
 
 {%block title%} Edugo {% endblock %}
+
+{% block styles %} 
+
+<style>
+    
+</style>
+
+{% endblock%}
+
+
+
+{%block content%} 
+
+
+
+{% endblock %}
