--- a/static/css/style.css
+++ b/static/css/style.css
@@ -71,6 +71,7 @@ body{
 
 .circle{
     
+       position: absolute;
     top: .75rem;
     right: 1rem;
     display: none;
@@ -80,29 +81,20 @@ body{
     margin: 10px;
     shape-outside: circle();
     clip-path: circle();
-    background: rgb(255, 0, 0);
+    background: rgb(0, 0, 0);
     
     z-index: 1;
  
-    }
+    } 
 
 @media (max-width: 550px){
     .toggle-button{
         display: flex;
     }
     .circle{
-    position: absolute;
-    top: -.7rem;
-    display: flex;
-    
-    width: 40px;
-    height: 40px;
-    margin: 0px;
-    shape-outside: circle();
-    clip-path: circle();
-    background: rgb(0, 0, 0);
-    z-index: -2;
-    transition: .9s;
+        display: flex;
+        z-index: 1;
+        transition: .9s;
  
     }
     .circle.active{
@@ -161,6 +153,7 @@ body{
     }
     .collapse-link li{
         text-align: left;
+        padding-top: 5px;
         padding-bottom: 30px;
     }
 
