--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -17,7 +17,7 @@
 
 <div id="LOGIN" align="center">
     <br />
-    <form align="center">
+    <form align="center" action="#" method="POST">
         <p>Enter your E-Mail : <input type="email" placeholder="  e-mail" id="email" name="email" />
             <br />
         </p>
