--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -6,7 +6,35 @@
 {% block styles %}
 
 <style>
+#button {
+        background-color: rgb(0, 0, 0);
+        color: white;
+        padding: 7px;
+        border-radius: 8px;
+        border: 1px solid rgb(39, 39, 39);
+        width: 70px;
+    }
 
+#heading{
+    text-align: center;
+    left: 0;
+    right: 0;
+    top: 10%;
+    margin: 0 auto;
+
+    background-color: rgba(169, 169, 169, 0.63);
+    max-width: 700px;
+}
+
+#LOGIN{
+    left: 0;
+    right: 0;
+    top: 10%;
+    margin: 0 auto;
+
+    background-color: rgba(169, 169, 169, 0.63);
+    max-width: 700px;
+}
 </style>
 
 {% endblock%}
@@ -14,7 +42,9 @@
 
 
 {%block content%}
-
+<div id="heading">
+    <h1>Sign up</h1>
+</div>
 <div id="LOGIN" align="center">
     <br />
     <form align="center" action="#" method="POST">
