--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -92,6 +92,28 @@ body{
  
     } 
 
+    .post-timeline ul{
+        margin: 5;
+        padding: 5;
+        
+    }
+
+.post-timeline li{
+        text-decoration: none;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 24px;
+        background-color: darkgray;
+        color: rgb(0, 0, 0);
+        
+        padding: 1rem;
+        display: block;
+}
+
+
+
+
+
+
 @media (max-width: 550px){
     .toggle-button{
         display: flex;
