--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,7 +6,46 @@
 {% block styles %} 
 
 <style>
+    .button-post {
+        background-color: rgb(0, 0, 0);
+        color: white;
+        padding: 7px;
+        border-radius: 8px;
+        border: 1px solid rgb(39, 39, 39);
+        width: 70px;
+    }
+
+.heading{
+    text-align: center;
+    left: 0;
+    right: 0;
+    top: 10%;
+    margin: 0 auto;
+    background-color: rgba(169, 169, 169, 0.63);
+
     
+    max-width: 700px;
+}
+.date{
+    font-size: 12px;
+}
+.button-close{
+    right: 0px;
+}
+
+.text-entry{
+    left: 0;
+    right: 0;
+    
+}
+
+.heading textarea:focus{
+    outline-color: rgb(187, 151, 221);
+    outline-width: 3px;
+    outline: slateblue ;
+
+}
+
 </style>
 
 {% endblock%}
@@ -16,21 +55,44 @@
 {%block content%} 
 
 <div class="main-container">
-    <h1 align="centre">TimeLine</h1>
+    <div class="heading">
+        <h1 align="centre">Add Post</h1>
+        <form method="POST">
+            <textarea name="post" id="post" cols="60" rows="5" class="post-entry"></textarea>
+            <br>
+            <div align="centre">
+                <button type="submit" class="button-post">Post</button>
+            </div>
+        </form>
+    
+    </div>
+   
+        
+    
 
-    <form action="#" method="POST">
-        <textarea name="post" id="post" cols="30" rows="10" class="post-entry"></textarea>
-        <br>
-        <div align="centre">
-            <button type="submit" class="button-post">Post</button>
-        </div>
-    </form>
+    
     <br>
-    <ul class="post-timeline" id="notes">
+    <div class="post-timeline">
+    <ul id="notes">
         {% for post in user.posts %}
-            <li>{{ post.data }}</li> 
+        
+            <li>
+                <div class="button-close">
+                    <button type="button" class="close" onclick="">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                
+                {{ post.data }}
+                <div class="date">~ {{post.date}}</div>
+                
+                
+            </li> 
+            <br>
+            <br>
         {% endfor %}
     </ul>
+    </div>
 
 </div>
 
