--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -78,7 +78,7 @@
         
             <li>
                 <div class="button-close">
-                    <button type="button" class="close" onclick="">
+                    <button type="button" class="close" onClick= "RemovePost({{post.id}})">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
