--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -73,7 +73,7 @@
     
     <br>
     <div class="post-timeline">
-    <ul id="notes">
+    <ul id="posts">
         {% for post in user.posts %}
         
             <li>
