--- a/website/templates/base2.html
+++ b/website/templates/base2.html
@@ -24,9 +24,9 @@
 
         <div class="navbar-links">
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="/home">Home</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="/feeds">Feeds</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
@@ -35,9 +35,9 @@
 
     <div class="collapse-link">
         <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="/home">Home</a></li>
             <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="/feeds">Feeds</a></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
 
