--- a/website/templates/base2.html
+++ b/website/templates/base2.html
@@ -25,7 +25,7 @@
         <div class="navbar-links">
             <ul>
                 <li><a href="/home">Home</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="">My Profile</a></li>
                 <li><a href="/feeds">Feeds</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
@@ -36,7 +36,7 @@
     <div class="collapse-link">
         <ul>
             <li><a href="/home">Home</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="">My Profile</a></li>
             <li><a href="/feeds">Feeds</a></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
