--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -58,11 +58,13 @@
                 name="password1" /><br /></p>
         <p>Re-enter Password : <input type="password" placeholder=" Confirm password..." id="password2"
                 name="password2" /><br /></p>
+        <p>Select Profile pic: <input type='file' name='profilepic'></p>
         <br>
         <br>
         <br>
         <input type="submit" id="button" value="Sign-up" /><br /><br />
         <p>OR</p>
+
         
     </form>
     <a href="/">Already have an account?<input type="button" id="button" name="search" value="Log In" /><br /></a>
