--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -54,6 +54,9 @@
         <p>Enter your Name : <input type="text" placeholder="Name" id="firstName" name="firstName" />
             <br />
         </p>
+        <p>Enter a username : <input type="text" placeholder="unique username" id="username" name="username" />
+            <br />
+        </p>
         <p>Enter your Password : <input type="password" placeholder="  password..." id="password1"
                 name="password1" /><br /></p>
         <p>Re-enter Password : <input type="password" placeholder=" Confirm password..." id="password2"
