--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -26,6 +26,15 @@ ul {
 
 }
 
+.heading{
+   
+    
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 40px;
+    padding-inline-start: 40px; 
+}
 
 .navbar{
     display: flex;
