--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -17,14 +17,13 @@
 
 .heading{
     text-align: center;
-    left: 0;
-    right: 0;
+    max-width: 80%;
     top: 10%;
     margin: 0 auto;
     background-color: rgba(169, 169, 169, 0.63);
 
     
-    max-width: 700px;
+    
 }
 .date{
     font-size: 12px;
@@ -39,6 +38,9 @@
     
 }
 
+.heading textarea{
+    width: 70%;
+}
 .heading textarea:focus{
     outline-color: rgb(187, 151, 221);
     outline-width: 3px;
