--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -61,7 +61,8 @@
                 name="password1" /><br /></p>
         <p>Re-enter Password : <input type="password" placeholder=" Confirm password..." id="password2"
                 name="password2" /><br /></p>
-        <p>Select Profile pic: <input type='file' name='profilepic'></p>
+        <p>Select Profile pic: <input type='file' id="imgInp" name='profilepic' accept="image/*"></p>
+        <img id="dispdp" src="#" width="100" height="100" alt="your image" />
         <br>
         <br>
         <br>
