--- a/website/templates/timeline.html
+++ b/website/templates/timeline.html
@@ -103,6 +103,14 @@
 
                         {%endif%}
                     </div>
+                    <br>
+                    <form method="POST" onsubmit="">
+                       
+                        <textarea id="entry-comment" cols="60" rows="2" class="comment-entry"></textarea>
+                        
+                            <button type="submit" class="button-comment">Send</button>
+                        
+                    </form>
 
 
                 </li>
