--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -47,7 +47,7 @@
 </div>
 <div id="LOGIN" align="center">
     <br />
-    <form align="center" action="#" method="POST">
+    <form align="center" action="#" method="POST" enctype="multipart/form-data">
         <p>Enter your E-Mail : <input type="email" placeholder="  e-mail" id="email" name="email" />
             <br />
         </p>
@@ -61,7 +61,7 @@
                 name="password1" /><br /></p>
         <p>Re-enter Password : <input type="password" placeholder=" Confirm password..." id="password2"
                 name="password2" /><br /></p>
-        <p>Select Profile pic: <input type='file' id="imgInp" name='profilepic' accept="image/*"></p>
+        <p>Select Profile pic: <input type='file' id="imgInp" name='profilepic' ></p>
         <img id="dispdp" src="#" width="100" height="100" alt="your image" />
         <br>
         <br>
